--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Willkommen in der Sommerakademie!</h1>
-    <a href="https://drive.google.com/file/d/17dMqfqvZPCekfJeCMaDcXpULu-fWFj-e/view?usp=sharing">Das aktuelle Wochenprogramm</a>   
-</body>
+    <a href="https://drive.google.com/file/d/1fJHoRHyl8VX1ETrXarFTOpdXc8Z4X4vA/view?usp=drive_link">Das aktuelle Wochenprogramm</a>
+</body> 
 </html>
